--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="fi">
 <head>
 <meta charset="UTF-8">
@@ -12,84 +12,70 @@ body { font-family: Arial, sans-serif; max-width: 750px; margin: auto; padding: 
 select, input, button { padding: 0.4rem; }
 .meal-controls select { flex: 1; }
 .item { display: flex; justify-content: space-between; margin-top: 0.3rem; }
-.item button { width: auto; }
 .locked { opacity: 0.6; pointer-events: none; }
+
 .summary-boxes { display: flex; gap: 0.5rem; flex-wrap: wrap; }
-.summary-box { border: 1px solid #ccc; padding: 0.5rem; min-width: 90px; text-align: center; }
+.summary-box { border: 1px solid #ccc; padding: 0.5rem; min-width: 100px; text-align: center; }
 .summary-box.positive { background:#e6f4ea; color:#1e6b3a; }
 .summary-box.negative { background:#fbeaea; color:#8a1f1f; }
 .summary-box.zero { background:#eee; color:#333; }
 .summary-box.nodata { background:#f5f5f5; color:#777; font-style:italic; }
-#backupBtn, #unlockBtn { float:right; margin-bottom:1rem; }
+
+#topButtons { float:right; }
 </style>
 </head>
 <body>
 
 <h2>Ruokaseuranta</h2>
-<h4>versio 1.2</h4>
-<button id="backupBtn" onclick="downloadCSV()">Varmuuskopioi CSV</button>
+<h4>versio 2.0</h4>
+
+<div id="topButtons">
+  <button onclick="downloadCSV()">CSV</button>
+  <button onclick="exportJSON()">JSON</button>
+  <input type="file" id="jsonImport" accept=".json" onchange="importJSON(event)">
+</div>
 
 <label>Päivä</label>
-<input type="date" id="date">
-<br>
+<input type="date" id="date"><br>
 <button id="unlockBtn" style="display:none;" onclick="unlockDay()">Muokkaa tietoja</button>
 
 <div id="content">
 
-<!-- AAMUPALA -->
-<div class="section" id="aamupala">
-<h3>Aamupala</h3>
+<!-- ATERIAT -->
+<div class="section" id="aamupala"><h3>Aamupala</h3>
 <div class="meal-controls">
 <select id="aamupalaSelect"></select>
 <input type="number" id="aamupalaGrams" placeholder="g">
 <button onclick="addFood('aamupala')">Lisää</button>
-</div>
-<div class="foods"></div>
-</div>
+</div><div class="foods"></div></div>
 
-<!-- LOUNAS -->
-<div class="section" id="lounas">
-<h3>Lounas</h3>
+<div class="section" id="lounas"><h3>Lounas</h3>
 <div class="meal-controls">
 <select id="lounasSelect"></select>
 <input type="number" id="lounasGrams" placeholder="g">
 <button onclick="addFood('lounas')">Lisää</button>
-</div>
-<div class="foods"></div>
-</div>
+</div><div class="foods"></div></div>
 
-<!-- VÄLIPALAT -->
-<div class="section" id="valipalat">
-<h3>Välipalat</h3>
+<div class="section" id="valipalat"><h3>Välipalat</h3>
 <div class="meal-controls">
 <select id="valipalatSelect"></select>
 <input type="number" id="valipalatGrams" placeholder="g">
 <button onclick="addFood('valipalat')">Lisää</button>
-</div>
-<div class="foods"></div>
-</div>
+</div><div class="foods"></div></div>
 
-<!-- ILLALLINEN -->
-<div class="section" id="illallinen">
-<h3>Illallinen</h3>
+<div class="section" id="illallinen"><h3>Illallinen</h3>
 <div class="meal-controls">
 <select id="illallinenSelect"></select>
 <input type="number" id="illallinenGrams" placeholder="g">
 <button onclick="addFood('illallinen')">Lisää</button>
-</div>
-<div class="foods"></div>
-</div>
+</div><div class="foods"></div></div>
 
-<!-- ILTAPALA -->
-<div class="section" id="iltapala">
-<h3>Iltapala</h3>
+<div class="section" id="iltapala"><h3>Iltapala</h3>
 <div class="meal-controls">
 <select id="iltapalaSelect"></select>
 <input type="number" id="iltapalaGrams" placeholder="g">
 <button onclick="addFood('iltapala')">Lisää</button>
-</div>
-<div class="foods"></div>
-</div>
+</div><div class="foods"></div></div>
 
 <!-- TREENIT -->
 <div class="section">
@@ -114,196 +100,293 @@ select, input, button { padding: 0.4rem; }
 
 <script>
 const BMR = 2000;
+const CARB_TARGET = 432;
+const FAT_TARGET = 72;
 
+/* ================= RUOKATIETOKANTA ================= */
 const foodsDB = {
-  appelsiini: { kcal:75, default:100 },
-  kauraleipa: { kcal:120, default:100 },
-  kaurapuuro_banaani: { kcal:450, default:100 },
-  kaurapuuro_piltti: { kcal:383, default:100 },
-  mehukeitto: { kcal:44, default:400 },
-  ruisleipa: { kcal:96, default:100 },
+  // Aamupalat & eväät
+  appelsiini: { kcal:75, carbs:12, fat:0, default:100 },
+  kauraleipa: { kcal:120, carbs:12.4, fat:5.6, default:100 },
+  kaurapuuro_banaani: { kcal:450, carbs:58, fat:5, default:100 },
+  kaurapuuro_piltti: { kcal:383, carbs:40, fat:4, default:100 },
+  mehukeitto: { kcal:44, carbs:11, fat:0, default:400 },
+  ruisleipa: { kcal:96, carbs:8.7, fat:4.6, default:100 },
+  kananmuna_paistettu: { kcal:107, carbs:1, fat:16, default:100 },
+  mysli: { kcal:340, carbs:62, fat:3.5, default:0 },
+  kauragurtti: { kcal:80, carbs:15, fat:1.4, default:0 },
 
-  gluteeniton_pasta: { kcal:356, default:0 },
-  kanakastike_kevyt: { kcal:95, default:0 },
-  kanakastike_semi: { kcal:120, default:0 },
-  kanakastike_tuhti: { kcal:150, default:0 },
-  kanaperuna: { kcal:83, default:0 },
-  lasagne: { kcal:120, default:0 },
-  peruna: { kcal:75, default:0 },
-  perunamuussi: { kcal:120, default:0 },
-  tonnikalapihvit: { kcal:170, default:0 },
-  täysjyväpasta: { kcal:343, default:0 },
-  täysjyväriisi: { kcal:145, default:0 }
+  // Lämpimät ruoat
+  gluteeniton_pasta: { kcal:356, carbs:74, fat:2.4, default:0 },
+  kanakastike_kevyt: { kcal:95, carbs:4, fat:3, default:0 },
+  kanakastike_semi: { kcal:120, carbs:4, fat:5, default:0 },
+  kanakastike_tuhti: { kcal:150, carbs:5, fat:9, default:0 },
+  kanaperuna: { kcal:83, carbs:7, fat:4, default:0 },
+  lasagne: { kcal:120, carbs:8.5, fat:6.5, default:0 },
+  peruna: { kcal:75, carbs:16, fat:0.1, default:0 },
+  perunamuussi: { kcal:120, carbs:20, fat:3, default:0 },
+  tonnikalapihvit: { kcal:170, carbs:4, fat:12, default:0 },
+  täysjyväpasta: { kcal:343, carbs:66, fat:2.5, default:0 },
+  täysjyväriisi: { kcal:145, carbs:68, fat:0.8, default:0 }
 };
+
 
 const mealFoods = {
-  aamupala: ["appelsiini","kauraleipa","kaurapuuro_banaani","kaurapuuro_piltti","mehukeitto","ruisleipa"],
-  valipalat: ["appelsiini","kauraleipa","kaurapuuro_banaani","kaurapuuro_piltti","mehukeitto","ruisleipa"],
-  iltapala: ["appelsiini","kauraleipa","kaurapuuro_banaani","kaurapuuro_piltti","mehukeitto","ruisleipa"],
-  lounas: ["gluteeniton_pasta","kanakastike_kevyt","kanakastike_semi","kanakastike_tuhti","kanaperuna","lasagne","peruna","perunamuussi","tonnikalapihvit","täysjyväpasta","täysjyväriisi"],
-  illallinen: ["gluteeniton_pasta","kanakastike_kevyt","kanakastike_semi","kanakastike_tuhti","kanaperuna","lasagne","peruna","perunamuussi","tonnikalapihvit","täysjyväpasta","täysjyväriisi"]
+  aamupala: [
+    "appelsiini",
+    "kauraleipa",
+    "kaurapuuro_banaani",
+    "kaurapuuro_piltti",
+    "mehukeitto",
+    "ruisleipa",
+    "kananmuna_paistettu",
+    "mysli",
+    "kauragurtti"
+  ],
+  valipalat: [
+    "appelsiini",
+    "kauraleipa",
+    "kaurapuuro_banaani",
+    "kaurapuuro_piltti",
+    "mehukeitto",
+    "ruisleipa",
+    "kananmuna_paistettu",
+    "mysli",
+    "kauragurtti"
+  ],
+  iltapala: [
+    "appelsiini",
+    "kauraleipa",
+    "kaurapuuro_banaani",
+    "kaurapuuro_piltti",
+    "mehukeitto",
+    "ruisleipa",
+    "kananmuna_paistettu",
+    "mysli",
+    "kauragurtti"
+  ],
+  lounas: [
+    "gluteeniton_pasta",
+    "kanakastike_kevyt",
+    "kanakastike_semi",
+    "kanakastike_tuhti",
+    "kanaperuna",
+    "lasagne",
+    "peruna",
+    "perunamuussi",
+    "tonnikalapihvit",
+    "täysjyväpasta",
+    "täysjyväriisi"
+  ],
+  illallinen: [
+    "gluteeniton_pasta",
+    "kanakastike_kevyt",
+    "kanakastike_semi",
+    "kanakastike_tuhti",
+    "kanaperuna",
+    "lasagne",
+    "peruna",
+    "perunamuussi",
+    "tonnikalapihvit",
+    "täysjyväpasta",
+    "täysjyväriisi"
+  ]
 };
 
-let dayData, isLocked=false;
+let dayData,isLocked=false;
 
-function emptyDay(){ return { foods:{aamupala:[],lounas:[],valipalat:[],illallinen:[],iltapala:[]}, trainings:[] }; }
+function emptyDay(){
+  return{foods:{aamupala:[],lounas:[],valipalat:[],illallinen:[],iltapala:[]},trainings:[]};
+}
 
+/* ================= UI ================= */
 function fillSelects(){
   for(let meal in mealFoods){
     const sel=document.getElementById(meal+"Select");
     sel.innerHTML='<option value="">Valitse ruoka</option>';
-    mealFoods[meal].sort().forEach(f=>{ sel.innerHTML+=`<option value="${f}">${f.replaceAll("_"," ")}</option>`; });
+    // Sortataan nimet aakkosjärjestykseen
+    mealFoods[meal].sort().forEach(f=>{
+      // Näytetään nimi ilman alaviivaa
+      sel.innerHTML+=`<option value="${f}">${f.replaceAll("_"," ")}</option>`;
+    });
   }
 }
 fillSelects();
 
-function attachDefaultGrams() {
-  const meals = ["aamupala","lounas","valipalat","illallinen","iltapala"];
-  meals.forEach(meal=>{
+function attachDefaultGrams(){
+  ["aamupala","lounas","valipalat","illallinen","iltapala"].forEach(meal=>{
     const sel=document.getElementById(meal+"Select");
-    const gramsInput=document.getElementById(meal+"Grams");
+    const grams=document.getElementById(meal+"Grams");
     sel.addEventListener("change",()=>{
-      if(sel.value){ gramsInput.value=foodsDB[sel.value].default; }
-      else{ gramsInput.value=""; }
+      grams.value=sel.value?foodsDB[sel.value].default:"";
     });
   });
 }
 attachDefaultGrams();
 
+/* ================= LISÄYS / POISTO ================= */
 function addFood(meal){
-  if(isLocked) return;
+  if(isLocked)return;
   const sel=document.getElementById(meal+"Select");
-  const gramsInput=document.getElementById(meal+"Grams");
-  if(!sel.value) return;
-  const grams=Number(gramsInput.value);
-  if(isNaN(grams) || grams <=0) return;
-  dayData.foods[meal].push({id:sel.value,grams});
-  gramsInput.value=""; sel.value="";
-  saveDraft(); render();
+  const grams=document.getElementById(meal+"Grams");
+  if(!sel.value||!grams.value)return;
+  dayData.foods[meal].push({id:sel.value,grams:Number(grams.value)});
+  sel.value="";grams.value="";
+  saveDraft();render();
 }
-function removeFood(meal,i){ if(isLocked) return; dayData.foods[meal].splice(i,1); saveDraft(); render(); }
+function removeFood(meal,i){
+  if(isLocked)return;
+  dayData.foods[meal].splice(i,1);
+  saveDraft();render();
+}
 
-function addTraining(){ 
-  if(isLocked) return; 
-  if(!trainingName.value || !trainingKcal.value) return;
+function addTraining(){
+  if(isLocked)return;
+  if(!trainingName.value||!trainingKcal.value)return;
   dayData.trainings.push({name:trainingName.value,kcal:Number(trainingKcal.value)});
-  trainingName.value=""; trainingKcal.value=""; saveDraft(); render();
+  trainingName.value="";trainingKcal.value="";
+  saveDraft();render();
 }
-function removeTraining(i){ if(isLocked) return; dayData.trainings.splice(i,1); saveDraft(); render(); }
+function removeTraining(i){
+  if(isLocked)return;
+  dayData.trainings.splice(i,1);
+  saveDraft();render();
+}
 
-// ==================================
-// Renderöinti: ruoka ja treenit
-// ==================================
+/* ================= RENDER ================= */
 function render(){
-  let foodKcal=0;
+  let kcal=0, carbs=0, fat=0;
   for(let meal in dayData.foods){
     const box=document.querySelector(`#${meal} .foods`);
     box.innerHTML="";
     dayData.foods[meal].forEach((f,i)=>{
-      const kcal=Math.round(f.grams*foodsDB[f.id].kcal/100);
-      foodKcal+=kcal;
-      box.innerHTML+=`<div class="item">${f.id.replaceAll("_"," ")} ${f.grams} g (${kcal} kcal)
+      const db=foodsDB[f.id];
+      const k=Math.round(f.grams*db.kcal/100);
+      const c=Math.round(f.grams*db.carbs/100);
+      const r=Math.round(f.grams*db.fat/100);
+      kcal+=k; carbs+=c; fat+=r;
+      box.innerHTML+=`<div class="item">
+        ${f.id.replaceAll("_"," ")} ${f.grams} g (${k} kcal, ${c} hh, ${r} r)
         <button onclick="removeFood('${meal}',${i})">❌</button>
       </div>`;
     });
   }
 
-  // Treenit samanlaisina elementteinä
   const trainBox=document.getElementById("trainings");
   trainBox.innerHTML="";
+  let trainKcal=0;
   dayData.trainings.forEach((t,i)=>{
+    trainKcal+=t.kcal;
     trainBox.innerHTML+=`<div class="item">${t.name} (${t.kcal} kcal)
       <button onclick="removeTraining(${i})">❌</button>
     </div>`;
   });
 
-  let trainKcal=dayData.trainings.reduce((s,t)=>s+t.kcal,0);
-  let net=Math.round(foodKcal-(BMR+trainKcal));
-
+  // Yhteenveto
   summary.innerHTML=`
-    Ruoasta: ${Math.round(foodKcal)} kcal<br>
-    Perusaineenvaihdunta: ${BMR} kcal<br>
-    Treeneistä: ${trainKcal} kcal<br><br>
-    <strong>Netto: ${net} kcal</strong>
-  `;
+  Ruoasta: ${kcal} kcal, ${carbs} hh, ${fat} r<br>
+  Perusaineenvaihdunta: ${BMR} kcal<br>
+  Treeneistä: ${trainKcal} kcal<br><br>
+  <strong>Netto: ${Math.round(kcal-(BMR+trainKcal))} kcal, ${Math.round(carbs-CARB_TARGET)} hh, ${Math.round(fat-FAT_TARGET)} r</strong>
+`;
+
 
   renderFiveDaySummary();
 }
 
-// ==================================
-// 5 päivän koonti
-// ==================================
+
+/* ================= 5 PÄIVÄÄ ================= */
 function renderFiveDaySummary(){
-  let html=`<h3>5 päivän koonti</h3><div class="summary-boxes">`, total=0;
+  let html=`<h3>5 päivän koonti</h3><div class="summary-boxes">`;
+  let totalKcal = 0, totalCarbs = 0, totalFat = 0;
+
   for(let i=1;i<=5;i++){
-    const d=new Date(date.value); d.setDate(d.getDate()-i);
-    const key=d.toISOString().split("T")[0];
-    const stored=localStorage.getItem(key);
-    if(stored){
-      const data=JSON.parse(stored);
-      let fkc=0;
-      Object.values(data.foods).flat().forEach(f=>fkc+=f.grams*foodsDB[f.id].kcal/100);
-      let tk=data.trainings.reduce((s,t)=>s+t.kcal,0);
-      let n=Math.round(fkc-(BMR+tk)); total+=n;
-      let cls=n>0?"positive":n<0?"negative":"zero";
-      html+=`<div class="summary-box ${cls}"><h4>-${i}</h4>${n} kcal</div>`;
-    } else {
+    const d = new Date(date.value);
+    d.setDate(d.getDate()-i);
+    const key = d.toISOString().split("T")[0];
+    const s = localStorage.getItem(key);
+
+    if(!s){
       html+=`<div class="summary-box nodata"><h4>-${i}</h4>Ei dataa</div>`;
+      continue;
     }
+
+    const data = JSON.parse(s);
+    let kcal = 0, c = 0, r = 0;
+
+    Object.values(data.foods).flat().forEach(f => {
+      const db = foodsDB[f.id];
+      kcal += f.grams * db.kcal / 100;
+      c    += f.grams * db.carbs / 100;
+      r    += f.grams * db.fat / 100;
+    });
+
+    totalKcal  += kcal - BMR;
+    totalCarbs += c - CARB_TARGET;
+    totalFat   += r - FAT_TARGET;
+
+    const cls = (kcal-BMR) > 0 ? "positive" : (kcal-BMR) < 0 ? "negative" : "zero";
+
+    html+=`<div class="summary-box ${cls}">
+      <h4>-${i}</h4>
+      ${Math.round(kcal-BMR)} kcal<br>
+      ${Math.round(c-CARB_TARGET)} hh<br>
+      ${Math.round(r-FAT_TARGET)} r
+    </div>`;
   }
-  html+=`</div><br><strong>Yhteensä: ${total} kcal</strong>`;
-  fiveDaySummary.innerHTML=html;
+
+  html+="</div>";
+  html+=`<br><strong>Yhteensä: ${Math.round(totalKcal)} kcal, ${Math.round(totalCarbs)} hh, ${Math.round(totalFat)} r</strong>`;
+
+  fiveDaySummary.innerHTML = html;
 }
 
-// ==================================
-// CSV-painike
-// ==================================
-function downloadCSV() {
-  let csv="Päivämäärä,Kalorit ruoasta,Treenien kalorit,Perusaineenvaihdunta,Netto\n";
-  for(let i=0;i<localStorage.length;i++){
-    const key=localStorage.key(i);
-    if(!key.match(/^\d{4}-\d{2}-\d{2}$/)) continue;
-    const data=JSON.parse(localStorage.getItem(key));
-    let foodKcal=0;
-    Object.values(data.foods).flat().forEach(f=>foodKcal+=f.grams*foodsDB[f.id].kcal/100);
-    let trainKcal=data.trainings.reduce((s,t)=>s+t.kcal,0);
-    let net=Math.round(foodKcal-(BMR+trainKcal));
-    csv+=`${key},${Math.round(foodKcal)},${trainKcal},${BMR},${net}\n`;
-  }
-  const blob=new Blob([csv],{type:"text/csv;charset=utf-8;"});
-  const link=document.createElement("a");
-  link.setAttribute("href",URL.createObjectURL(blob));
-  link.setAttribute("download","ruokaseuranta_backup.csv");
-  document.body.appendChild(link);
-  link.click();
-  document.body.removeChild(link);
-}
 
-// ==================================
-function saveDraft(){ localStorage.setItem("draft-"+date.value,JSON.stringify(dayData)); }
-function saveDay(){ localStorage.setItem(date.value,JSON.stringify(dayData)); localStorage.removeItem("draft-"+date.value); lockDay(); }
-function lockDay(){ isLocked=true; content.classList.add("locked"); saveBtn.style.display="none"; unlockBtn.style.display="block"; }
-
-function unlockDay(){
-  isLocked=false;
-  content.classList.remove("locked");
-  saveBtn.style.display="block";
-  unlockBtn.style.display="none";
-}
+/* ================= TALLENNUS ================= */
+function saveDraft(){localStorage.setItem("draft-"+date.value,JSON.stringify(dayData));}
+function saveDay(){localStorage.setItem(date.value,JSON.stringify(dayData));localStorage.removeItem("draft-"+date.value);lockDay();}
+function lockDay(){isLocked=true;content.classList.add("locked");saveBtn.style.display="none";unlockBtn.style.display="block";}
+function unlockDay(){isLocked=false;content.classList.remove("locked");saveBtn.style.display="block";unlockBtn.style.display="none";}
 
 date.addEventListener("change",()=>{
   const f=localStorage.getItem(date.value);
   const d=localStorage.getItem("draft-"+date.value);
-  if(f){
-    dayData=JSON.parse(f); 
-    lockDay(); // lukitsee ja näyttää unlock-painikkeen
-  } else { 
-    isLocked=false; content.classList.remove("locked"); saveBtn.style.display="block"; unlockBtn.style.display="none";
-    dayData=d?JSON.parse(d):emptyDay(); 
-  }
+  if(f){dayData=JSON.parse(f);lockDay();}
+  else{isLocked=false;content.classList.remove("locked");saveBtn.style.display="block";unlockBtn.style.display="none";dayData=d?JSON.parse(d):emptyDay();}
   render();
 });
-</script>
 
+/* ================= EXPORT / IMPORT ================= */
+function exportJSON(){
+  const data={};
+  for(let i=0;i<localStorage.length;i++){
+    const k=localStorage.key(i);
+    if(k.match(/^\d{4}-\d{2}-\d{2}$/))data[k]=JSON.parse(localStorage.getItem(k));
+  }
+  const blob=new Blob([JSON.stringify(data,null,2)],{type:"application/json"});
+  const a=document.createElement("a");
+  a.href=URL.createObjectURL(blob);
+  a.download="ruokaseuranta_backup.json";
+  a.click();
+}
+
+function importJSON(e){
+  const file=e.target.files[0];
+  if(!file)return;
+  const r=new FileReader();
+  r.onload=()=>{
+    const data=JSON.parse(r.result);
+    Object.entries(data).forEach(([k,v])=>{
+      Object.values(v.foods).flat().forEach(f=>{
+        foodsDB[f.id].carbs ??=0;
+        foodsDB[f.id].fat ??=0;
+      });
+      localStorage.setItem(k,JSON.stringify(v));
+    });
+    alert("Varmuuskopio palautettu");
+  };
+  r.readAsText(file);
+}
+</script>
 </body>
 </html>
