--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ select, input, button { padding: 0.4rem; }
 <body>
 
 <h2>Ruokaseuranta</h2>
-<h4>versio 2.0.4 Tuotanto</h4>
+<h4>versio 2.0.5 Tuotanto</h4>
 
 <div id="topButtons">
   <button onclick="downloadCSV()">CSV</button>
@@ -105,30 +105,38 @@ const FAT_TARGET = 72;
 
 /* ================= RUOKATIETOKANTA ================= */
 const foodsDB = {
-  // Aamupalat & eväät
-  appelsiini: { kcal:75, carbs:12, fat:0, default:100 },
-  kauraleipa: { kcal:120, carbs:12.4, fat:5.6, default:100 },
-  kaurapuuro_banaani: { kcal:450, carbs:58, fat:5, default:100 },
-  kaurapuuro_piltti: { kcal:383, carbs:40, fat:4, default:100 },
-  mehukeitto: { kcal:44, carbs:11, fat:0, default:400 },
-  ruisleipa: { kcal:96, carbs:8.7, fat:4.6, default:100 },
-  kananmuna_paistettu: { kcal:107, carbs:1, fat:16, default:100 },
-  mysli: { kcal:340, carbs:62, fat:3.5, default:0 },
-  kauragurtti: { kcal:80, carbs:15, fat:1.4, default:0 },
+  // ===== AAMUPALA / VÄLIPALAT =====
+  appelsiini: { kcal: 75, carbs: 12, fat: 0, default: 100 },
+  kauraleipa: { kcal: 120, carbs: 12.4, fat: 5.6, default: 100 },
+  kaurapuuro_banaani: { kcal: 450, carbs: 58, fat: 5, default: 100 },
+  kaurapuuro_piltti: { kcal: 383, carbs: 40, fat: 4, default: 100 },
+  mehukeitto: { kcal: 44, carbs: 11, fat: 0, default: 400 },
+  ruisleipa: { kcal: 96, carbs: 8.7, fat: 4.6, default: 100 },
+  kananmuna_paistettu: { kcal: 107, carbs: 1, fat: 16, default: 100 },
+  mysli: { kcal: 340, carbs: 62, fat: 3.5, default: 0 },
+  kauragurtti: { kcal: 80, carbs: 15, fat: 1.4, default: 0 },
+  taatelit: { kcal: 349, carbs: 66, fat: 3.8, default: 0 },
+  ananas: { kcal: 59, carbs: 13, fat: 0, default: 0 },
 
-  // Lämpimät ruoat
-  gluteeniton_pasta: { kcal:356, carbs:74, fat:2.4, default:0 },
-  kanakastike_kevyt: { kcal:95, carbs:4, fat:3, default:0 },
-  kanakastike_semi: { kcal:120, carbs:4, fat:5, default:0 },
-  kanakastike_tuhti: { kcal:150, carbs:5, fat:9, default:0 },
-  kanaperuna: { kcal:83, carbs:7, fat:4, default:0 },
-  lasagne: { kcal:120, carbs:8.5, fat:6.5, default:0 },
-  peruna: { kcal:75, carbs:16, fat:0.1, default:0 },
-  perunamuussi: { kcal:120, carbs:20, fat:3, default:0 },
-  tonnikalapihvit: { kcal:170, carbs:4, fat:12, default:0 },
-  täysjyväpasta: { kcal:343, carbs:66, fat:2.5, default:0 },
-  täysjyväriisi: { kcal:145, carbs:68, fat:0.8, default:0 }
+  // ===== LÄMPIMÄT RUOAT =====
+  cajun: { kcal: 66, carbs: 3.6, fat: 2.1, default: 0 },
+  gluteeniton_pasta: { kcal: 356, carbs: 74, fat: 2.4, default: 0 },
+  kanakastike_kevyt: { kcal: 95, carbs: 4, fat: 3, default: 0 },
+  kanakastike_semi: { kcal: 120, carbs: 4, fat: 5, default: 0 },
+  kanakastike_tuhti: { kcal: 150, carbs: 5, fat: 9, default: 0 },
+  kanaperuna: { kcal: 83, carbs: 7, fat: 4, default: 0 },
+  lasagne: { kcal: 132, carbs: 9.3, fat: 7.1, default: 0 },
+  makaronilaatikko_deluxe: { kcal: 132, carbs: 15.9, fat: 3.8, default: 0 },
+  peruna: { kcal: 75, carbs: 16, fat: 0.1, default: 0 },
+  perunamuussi: { kcal: 120, carbs: 20, fat: 3, default: 0 },
+  tacocastike: { kcal: 63, carbs: 4.3, fat: 4.8, default: 0 },
+  tonnikalapihvit: { kcal: 170, carbs: 4, fat: 12, default: 0 },
+  tuscana: { kcal: 80, carbs: 4.2, fat: 2.9, default: 0 },
+  täysjyväpasta: { kcal: 158, carbs: 39, fat: 0.9, default: 0 },
+  täysjyväriisi: { kcal: 122, carbs: 24, fat: 1, default: 0 },
+  wok: { kcal: 72, carbs: 7.7, fat: 3.1, default: 0 }
 };
+
 
 
 const mealFoods = {
@@ -141,8 +149,11 @@ const mealFoods = {
     "ruisleipa",
     "kananmuna_paistettu",
     "mysli",
-    "kauragurtti"
+    "kauragurtti",
+    "taatelit",
+    "ananas"
   ],
+
   valipalat: [
     "appelsiini",
     "kauraleipa",
@@ -152,8 +163,11 @@ const mealFoods = {
     "ruisleipa",
     "kananmuna_paistettu",
     "mysli",
-    "kauragurtti"
+    "kauragurtti",
+    "taatelit",
+    "ananas"
   ],
+
   iltapala: [
     "appelsiini",
     "kauraleipa",
@@ -163,35 +177,50 @@ const mealFoods = {
     "ruisleipa",
     "kananmuna_paistettu",
     "mysli",
-    "kauragurtti"
+    "kauragurtti",
+    "taatelit",
+    "ananas"
   ],
+
   lounas: [
+    "cajun",
     "gluteeniton_pasta",
     "kanakastike_kevyt",
     "kanakastike_semi",
     "kanakastike_tuhti",
     "kanaperuna",
     "lasagne",
+    "makaronilaatikko_deluxe",
     "peruna",
     "perunamuussi",
+    "tacocastike",
     "tonnikalapihvit",
+    "tuscana",
     "täysjyväpasta",
-    "täysjyväriisi"
+    "täysjyväriisi",
+    "wok"
   ],
+
   illallinen: [
+    "cajun",
     "gluteeniton_pasta",
     "kanakastike_kevyt",
     "kanakastike_semi",
     "kanakastike_tuhti",
     "kanaperuna",
     "lasagne",
+    "makaronilaatikko_deluxe",
     "peruna",
     "perunamuussi",
+    "tacocastike",
     "tonnikalapihvit",
+    "tuscana",
     "täysjyväpasta",
-    "täysjyväriisi"
+    "täysjyväriisi",
+    "wok"
   ]
 };
+
 
 let dayData,isLocked=false;
 
